TINY-2211: Fixed code editor overflowing outside dialog body in FF, IE & Edge

--- a/src/less/theme/components/well/well.less
+++ b/src/less/theme/components/well/well.less
@@ -27,10 +27,12 @@
     }
   }
 
-  // TODO - Revisit styles & classes for codemirror wrapper
+  // TODO - Revisit styles & classes for code editor wrapper
   .tox-custom-editor {
     border: @well-border-width solid @well-border-color;
     border-radius: @well-border-radius;
     display: flex;
+    // Temporary fix to prevent code editor overflowing outside dialog body in Firefox, Edge & IE
+    max-height: 525px;
   }
 }
